<resources>
    <string name="app_name">Plod</string>

    <string name="main_text">PLOD</string>

    <string name="playlist">플레이리스트</string>
    <string name="record">녹음</string>
    <string name="video">동영상</string>

    <string name="playlist_main_text">현수와 동화의 플레이리스트</string>

    <string name="hint_input_song">노래 제목을 입력하세요.</string>
    <string name="hint_input_singer">가수 이름을 입력하세요.</string>
    <string name="hint_input_genre">장르를 입력하세요.</string>

    <string name="login_selection_text">내 안의 가수 욕망</string>

    <string name="sign_up">회원가입 하기</string>
    <string name="sign_in">로그인 하기</string>
    <string name="sign_in_naver">네이버로 로그인 하기</string>
    <string name="sign_in_kakao">카카오로 로그인 하기</string>

    <string name="input_email">이메일을 입력해주세요.</string>
    <string name="input_verification_code">인증번호를 입력해주세요.</string>
    <string name="notification_verification_code_sent">인증번호가 발송되었습니다.</string>

    <string name="get_verification_code">인증코드 받기</string>
    <string name="verification_completed">인증 완료</string>

    <string name="input_password">비밀번호를 설정해주세요.</string>
    <string name="input_password_re">비밀번호 확인</string>
    <string name="notification_wrong_password">비밀번호가 일치하지 않습니다.</string>

    <string name="start">시작하기</string>
    <string name="input_login_email">이메일</string>
    <string name="input_login_password">비밀번호</string>
    <string name="login_find_id">아이디가 생각나지 않으세요? ></string>
    <string name="login_failed">로그인에 실패하였습니다.</string>

</resources>