<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".login.selection.LoginSelectionFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/login_selection_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableBottomCompat="@drawable/logo_plod" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginHorizontal="48dp"
            android:textSize="16sp"
            android:text="@string/sign_up"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:paddingVertical="16dp"/>

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginHorizontal="48dp"
            android:textSize="16sp"
            android:text="@string/sign_in"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:paddingVertical="16dp"/>

        <TextView
            android:id="@+id/tv_sign_in_naver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginHorizontal="48dp"
            android:textSize="16sp"
            android:text="@string/sign_in_naver"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:paddingVertical="16dp"/>

        <TextView
            android:id="@+id/tv_sign_in_kakao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginHorizontal="48dp"
            android:textSize="16sp"
            android:text="@string/sign_in_kakao"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginVertical="8dp"
            android:paddingVertical="16dp"/>
    </LinearLayout>
</LinearLayout>