<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.signup.SignUpPasswordFragment">

    <data>

        <variable
            name="viewModel"
            type="dong.android.plod.login.signup.SignUpPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_start"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_password"
                android:textColor="@color/color_main"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.passWord}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/input_password_re"
                android:textColor="@color/color_main"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_password_re"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.passWordRe}" />

            <TextView
                android:id="@+id/tv_wrong_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_wrong_password"
                android:textColor="#FFFF0000"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_main"
            android:paddingVertical="16dp"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
