<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.signup.SignUpEmailFragment">

    <data>

        <variable
            name="viewModel"
            type="dong.android.plod.login.signup.SignUpEmailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_get_verification_code"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_email"
                android:textColor="@color/color_main"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_wrong_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFF0000"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/input_verification_code"
                android:textColor="@color/color_main"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={viewModel.verificationCodeInput}"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_verification_code_sent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_verification_code_sent"
                android:textColor="#FFFF0000"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_get_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_main"
            android:paddingVertical="16dp"
            android:text="@string/get_verification_code"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btn_verification_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_main"
            android:enabled="false"
            android:paddingVertical="16dp"
            android:text="@string/verification_completed"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

