<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".main.main.MainFragment">

    <TextView
        android:id="@+id/tv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main">

        <TextView
            android:id="@+id/tv_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/outline_gray"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingTop="48dp"
            android:paddingBottom="24dp"
            android:text="@string/playlist"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:drawableTopCompat="@drawable/ic_playlist_48" />

        <TextView
            android:id="@+id/tv_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/outline_gray"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingTop="48dp"
            android:paddingBottom="24dp"
            android:text="@string/record"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:drawableTopCompat="@drawable/ic_record_48" />

        <TextView
            android:id="@+id/tv_video"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/outline_gray"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingTop="48dp"
            android:paddingBottom="24dp"
            android:text="@string/video"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:drawableTopCompat="@drawable/ic_video_48" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>